<resources>

    <!--- Principal labels -->
    <string name="app_name">Conecta Culturas</string>
    <string name="app_entity">Corape - Ciespal</string>

    <!--- Intent variables texts-->
    <string name="intent_email_text">emailText</string>
    <string name="intent_user_information">jsonUser</string>
    <string name="intent_content_information">jsonContent</string>
    <string name="intent_communities_information">jsonCommunities</string>
    <string name="intent_type_process_login">comeFrom</string>
    <string name="intent_IMEI">IMEI</string>

    <!--- Email Address activity texts-->
    <string name="label_title">CENTRO DE DOCUMENTACIÓN DE PUEBLOS INDÍGENAS</string>
    <string name="btn_enter">INGRESAR</string>
    <string name="btn_tour">TOUR</string>
    <string name="hint_emailaddress">Correo Electrónico</string>
    <string name="is_user_enabled">A</string>
    <string name="message_error_email">Ingrese un correo electrónico válido</string>
    <string name="message_error_IMEI">Error obteniendo infomación del dispositivo</string>


    <!--- Sing In activity texts-->
    <string name="label_title_singin">REGISTRO DE USUARIOS</string>
    <string name="btn_singin">REGISTRAR</string>
    <string name="hint_username">Nombre y Apellido</string>
    <string name="hint_nationality">Nacionalidad:</string>
    <string name="hint_select">seleccionar</string>
    <string name="hint_community">Seleccionar comunidad</string>
    <string name="message_error_username">Ingrese un nombre de usuario</string>
    <string name="message_error_community">Comunidad no válida, seleccione una por favor</string>
    <string name="message_error_information_signin">Los campos son obligatorios</string>

    <!--- Send Content activity texts-->
    <string name="hint_theme">Tema</string>
    <string name="hint_option_content">Agregue un contenido</string>
    <string name="hint_description">Descripción</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_clean">Limpiar</string>
    <string name="label_take">Capturar </string>
    <string name="take_picture">Fotografia</string>
    <string name="record_video">Video</string>
    <string name="record_audio">Audio</string>
    <string name="option_camera">Capturar desde cámara</string>
    <string name="option_gallery">Seleccionar de la galería</string>
    <string name="select_action">Seleccione una acción</string>
    <string name="file_size_violation">El archivo supera los 25 MB, no se puede cargar.</string>
    <string name="file_image_error">Error cargando el archivo de imagen, intente nuevamente</string>
    <string name="file_video_error">Error cargando el archivo de video, intente nuevamente</string>
    <string name="file_audio_error">Error cargando el archivo de audio, intente nuevamente</string>
    <string name="confirm_cancellation">¿Está seguro que desea cancelar la subida de contenido?</string>

    <string name="accept_confirmation">Confirmar</string>
    <string name="cancel_confirmation">Cancelar</string>
    <string name="btn_edit_content">Editar</string>
    <string name="cant_send_content">No se puede enviar contenido; archivo, tema y comunidad son obligatorios</string>
    <string name="confirm_send_content">Confirme el envio de contenido, no cierre la aplicacion mientras el contenido es enviado</string>
    <string name="title_send_content">Envio de contenido</string>
    <string name="send_successful">El contenido se ha enviado con éxito</string>
    <string name="send_error_internet">No se tiene acceso a intenet, el contenido ha sido almacenado en modo offline</string>
    <string name="send_error_server">Un error desconocido ha ocurrido, el contenido ha sido almacenado en modo offline</string>

    <string name="btn_record_audio">Aceptar</string>
    <string name="txt_name_audio">Audio: </string>

    <!--- Internet client texts-->
    <string name="error_access_internet">No hay conexión a internet, no se puede continuar</string>
    <string name="error_access_services">Los servicios no se encuentran disponibles, inténtelo nuevamente más tarde</string>
    <string name="no_user_found">{\"message\":\"No user was found\"}</string>
    <string name="user_not_found">{\"message\":\"User not found\"}</string>
    <string name="imei_not_register">{\"message\":\"This imei is not register\"}</string>
    <string name="error_unexpected">Un error desconocido ha ocurrido, intente nuevamente</string>
    <string name="error_saving_data">Error guardando informacion del usuario, intente nuevamente</string>
    <string name="error_saving_data_communities">Error guardando informacion de comunidades, intente nuevamente</string>
    <string name="cheking_email">Comprobando información del correo...</string>
    <string name="verification_process">Verifique su cuenta, no desconecte el internet...</string>
    <string name="new_user">Nuevo usuario</string>
    <string name="imei_changed">Nuevo dispositivo</string>
    <string name="singin_user">Registrando datos de usuario...</string>


    <!--- Verification activity texts-->
    <string name="label_message_verify_account">Active su cuenta con el correo de verificación, por favor no cierre la aplicación</string>
    <string name="label_message_verify_change">Esta cuenta ya ha sido registrada en otro dispositivo, valide el cambio desde su correo, no cierre la aplicación</string>
    <string name="btn_count_activated">Ya activé mi cuenta</string>
    <string name="btn_resend_mail">Reenviar correo</string>
    <string name="message_user_not_enabled">Cuenta no verificada, revice su correo</string>


    <!--- Offline activity texts-->
    <string name="title_offline_content">Contenido Offline</string>
    <string name="no_offline_content">No hay contenido offline que administrar</string>
    <string name="btn_accept_offline_content">Aceptar</string>
    <string name="btn_send_all">Enviar Todos</string>
    <string name="confirm_cancellation_edit">¿Está seguro que desea cancelar la edición de contenido?</string>
    <string name="confirm_edit_content">Confirme la edicion de contenido...</string>
    <string name="title_edit_content">Edición de contenido</string>
    <string name="sendAll_error_internet">No se tiene acceso a internet, no es posible enviar los contenidos</string>
    <string name="sendAll_successful">Todos los contenidos se han enviado con éxito</string>
    <string name="sendAll_error_server">Un error desconocido ha ocurrido, algunos contenidos no pudieron enviarse</string>
    <string name="confirm_sendAll_content">Confirme el envio de contenidos, no cierre la aplicacion mientras los contenidos son enviados</string>

    <string name="title_delete_content">Eliminación de contenido</string>
    <string name="confirm_delete_content">¿Está seguro que desea eliminar el contenido?</string>
    <string name="confirm_delete_week_content">Tiene contenidos offline con más de una semana almacenados, ¿Desea eliminarlos?</string>
    <string name="delete_successful">Eliminación de contenido exitosa</string>
    <string name="delete_error">Error eliminando contenido offine</string>


    <!--- Offline activity texts-->
    <string name="title_content">Contenidos</string>


    <!--- See specific content activity texts-->
    <string name="is_approved">Este contenido ha sido aprobado</string>
    <string name="no_approved">Este contenido no se encuentra aprobado</string>
    <string name="write_file">This app needs access to your file storage so that it can write files.</string>
    <string name="btn_see_multimedia">TOCA PARA VER EL CONTENIDO</string>
    <string name="hint_content_name">NOMBRE DEL CONTENIDO</string>
    <string name="hint_community_type">Comunidad/Tipo contenido</string>
    <string name="hint_content_state">Estado</string>
    <string name="hint_content_description">Descripcion</string>
    <string name="hint_write_comment">Escribe tu comentario...</string>
    <string name="btn_send_comment">Enviar Comentario</string>
    <string name="btn_comments">Ver Comentarios</string>
    <string name="btn_reviews">Ver Reseñas</string>
    <string name="error_no_comment">Escriba un comentario</string>
    <string name="error_no_reviews">"No hay reseñas que mostrar</string>
    <string name="send_comment_successful">Comentario enviado con exito</string>
    <string name="liked_message">Se ha agregado a los contenidos que </string>
    <string name="just_liked_message">Ya ha indicado que </string>
    <string name="status_like">le gusta</string>
    <string name="status_dislike">no le gusta</string>

    <!--- See specific community activity texts-->
    <string name="hint_community_name">Nombre Comunidad</string>
    <string name="hint_nationality_name">Nombre Nacionalidad</string>
    <string name="hint_registered_user">&#160;Usuarios registrados</string>
    <string name="hint_publications">&#160;publicaciones</string>
    <string name="hint_publications_approved">&#160;publicaciones aprobadas</string>
    <string name="hint_points">&#160;puntos</string>

    <!-- Menu Titles -->
    <string name="main_upload_content">SUBIR CONTENIDO</string>
    <string name="main_see_content">VER CONTENIDOS</string>
    <string name="main_offline_content">CONTENIDO OFFLINE</string>
    <string name="main_know_user">CONOCER USUARIOS</string>
    <string name="main_know_communities">CONOCER COMUNIDADES</string>
    <string name="main_moderate">MODERAR</string>
    <string name="main_see_my_content_published">MIS PUBLICACIONES</string>
    <string name="hint_name_user">NOMBRE DE USUARIO</string>
    <string name="hint_name_community">COMUNIDAD</string>
    <string name="hint_name_badge">INSIGNIA</string>
    <string name="main_see_my_profile">Ver mi perfil</string>


    <!-- Item list communities -->
    <string name="community_name">NOMBRE COMUNIDAD</string>
    <string name="community_nationality">NOMBRE NACIONALIDAD</string>

    <!-- Community Information -->
    <string name="town_register_users">Usuarios registrados</string>
    <string name="town_num_post">publicaciones</string>
    <string name="town_num_apb_post">publicaciones aprobadas</string>

    <!-- User Activity -->
    <string name="hint_search_user">Busca un usuario</string>
    <string name="hint_actions_available">Puede...</string>
    <string name="txt_action_conocedor">Puede publicar contenidos en la app</string>
    <string name="txt_action_compa">Puede comentar otros contenidos</string>
    <string name="txt_action_comunicador">Puede aprobar contenidos de su nacionalidad</string>

</resources>
