<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="30dp"
            android:layout_height="wrap_content"
            android:gravity="center">


            <TextView
                android:id="@+id/txtCommunityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_community_name"
                android:textAlignment="textEnd"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/txtNationalityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nationality_name"
                android:textAlignment="textEnd"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtRegisteredUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100sp"
                android:hint="@string/hint_registered_user"
                android:textAlignment="textEnd"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtPublications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_publications"
                android:textAlignment="textEnd"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtPublicationsApproved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_publications_approved"
                android:textAlignment="textEnd"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="139dp"
                android:layout_marginTop="100dp"
                android:gravity="center">


                <Button
                    android:id="@+id/btnContentsCommunity"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGreen"
                    android:text="@string/main_see_content"
                    android:textSize="20sp" />


            </LinearLayout>


        </LinearLayout>



    </ScrollView>





</LinearLayout>
