<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo_grdnt"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="30dp"

            android:paddingTop="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="30dp">


            <LinearLayout
                android:id="@+id/btn_see_multimedia_content"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:hint="@string/hint_username"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorTextLabel"
                    android:textSize="@dimen/dimenTitleLabel"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtEmailAddress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/hint_emailaddress"
                    android:maxLines="1"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorHintEditText"
                    android:textSize="@dimen/dimenEditText" />



                <TextView
                    android:id="@+id/txtCommunityNationality"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingTop="30dp"
                    android:hint="Waorani/Waorani"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorTextLabel"
                    android:textSize="@dimen/dimenTitleLabel" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorTextLabel" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:paddingRight="20dp">


                        <TextView
                            android:id="@+id/txtBadgeName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:paddingTop="10dp"
                            android:textColor="@color/colorTextLabel"
                            android:textSize="@dimen/dimenTitleLabel"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtActions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_actions_available"
                            android:textColor="@color/colorTextLabel"
                            android:textSize="@dimen/dimenSubTitleLabel" />

                        <TextView
                            android:id="@+id/txtPublications"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:hint="@string/hint_publications"
                            android:maxLines="1"
                            android:paddingTop="30dp"
                            android:textColor="@color/colorTextLabel"
                            android:textSize="@dimen/dimenEditText" />

                        <TextView
                            android:id="@+id/txtPublicationsApproved"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_publications_approved"
                            android:textColor="@color/colorTextLabel"
                            android:textSize="@dimen/dimenEditText" />

                        <TextView
                            android:id="@+id/txtPoints"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:paddingTop="30dp"
                            android:hint="@string/hint_points"
                            android:textColor="@color/colorTextLabel"
                            android:textSize="@dimen/dimenEditText" />


                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.5"
                        android:gravity="center_horizontal"
                        android:src="@drawable/bronze_medal" />


                </LinearLayout>






            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginTop="100dp"
                android:gravity="center">


                <Button
                    android:id="@+id/btnContentsUser"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGreen"
                    android:text="@string/main_see_content"
                    android:textSize="20sp" />


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>
